# opencv_code

./: README.md
code_linux/: CMakeLists.txt
code_linux/1/: 1_HelloOpenCV.cpp  2_ShowImage.cpp  3_ImageErode.cpp  4_BlurImage.cpp  5_Canny.cpp  6_PlayVideo.cpp  7_UseCamera.cpp  CMakeLists.txt
code_linux/2/: 10_lkdemo.cpp  11_ObjectDetection.cpp  12_SupportVectorMachines.cpp  13_SVMForNonLinearlySeparableData.cpp  8_CamShiftDemo.cpp  9_OpticalFlow.cpp  CMakeLists.txt
code_linux/4/: 20_DrawImage.cpp  CMakeLists.txt
code_linux/5/: 21_UsePointerAccessPixel.cpp  25_ImageBlending.cpp  26_MultiChannelImageBlending.cpp  27_ChangeContrastAndBright.cpp  28_DFT.cpp  CMakeLists.txt
code_linux/6/: 31_boxFilter.cpp  32_blur.cpp  33_GaussianBlur.cpp  34_LinearImageFilter.cpp  35_medianBlur.cpp  36_bilateralFilter.cpp  37_ImageFiltering.cpp  40_dilate_And_erode.cpp  55_threshold.cpp  CMakeLists.txt
code_linux/7/: 56_canny.cpp  65_remap.cpp  67_AffineTransform.cpp  68_equalizeHist.cpp  CMakeLists.txt
code_win/【10】第十章/【85】cornerHarris函数用法示例/85_cornerHarris函数用法示例/: 85_cornerHarris.cpp
code_win/【10】第十章/【86】Harris角点检测/86_Harris角点检测/: 86_cornerHarris.cpp
code_win/【10】第十章/【87】Shi-Tomasi角点检测/87_Shi-Tomasi角点检测/: 87_goodFeaturesToTrack.cpp
code_win/【10】第十章/【88】亚像素级角点检测/88_亚像素级角点检测/: 88_cornerSubPix.cpp
code_win/【1】第一章/【2】图像显示/2_图像显示/: 2_ShowImage.cpp
code_win/【1】第一章/【3】图像腐蚀/3_图像腐蚀/: 3_ImageErode.cpp
code_win/【1】第一章/【4】blur图像模糊/4_blur图像模糊/: 4_BlurImage.cpp
code_win/【1】第一章/【5】canny边缘检测/5_canny边缘检测/: 5_Canny.cpp
code_win/【1】第一章/【6】播放视频/6_播放视频/: 6_PlayVideo.cpp
code_win/【1】第一章/【7】调用摄像头/7_调用摄像头/: 7_UseCamera.cpp
code_win/【2】第二章/【11】人脸识别/11_人脸识别/: 11_ObjectDetection.cpp
code_win/【2】第二章/【12】支持向量机之SVM引导/12_支持向量机之SVM引导/: 12_SupportVectorMachines.cpp
code_win/【2】第二章/【14】printf函数用法示例/14_printf函数用法示例/: 14_Use_printf.cpp
code_win/【2】第二章/【9】用光流法进行运动目标检测/9_用光流法进行运动目标检测/: 9_OpticalFlow.cpp
code_win/【3】第三章/【15】利用imwrite生成透明png图像/15_利用imwrite生成透明png图像/: 15_Use_imwrite.cpp
code_win/【3】第三章/【16】图像的载入，显示和输出/16_图像的载入，显示和输出/: 16_LoadShowOutputImage.cpp
code_win/【3】第三章/【17】为程序界面添加滑动条/17_为程序界面添加滑动条/: 17_CreateTrackbar.cpp
code_win/【3】第三章/【18】基本鼠标操作/18_基本鼠标操作/: 18_UseMouse.cpp
code_win/【4】第四章/【19】基础图像容器Mat/19_基础图像容器Mat/: 19_UseMat.cpp
code_win/【4】第四章/【20】用OpenCV进行基本绘图/20_用OpenCV进行基本绘图/: 20_DrawImage.cpp
code_win/【5】第五章/【21】用指针访问像素/21_用指针访问像素/: 21_UsePointerAccessPixel.cpp
code_win/【5】第五章/【22】用迭代器访问像素/22_用迭代器访问像素/: 22_UseIteratorAccessPixel.cpp
code_win/【5】第五章/【23】用动态地址计算配合at访问像素/23_用动态地址计算配合at访问像素/: 23_UseAtAccessPixel.cpp
code_win/【5】第五章/【24】遍历图像像素的14种方法/24_遍历图像像素的14种方法/: 24_14WaysToAccessPixel.cpp
code_win/【5】第五章/【25】初级图像混合/25_初级图像混合/: 25_ImageBlending.cpp
code_win/【5】第五章/【26】多通道图像混合/26_多通道图像混合/: 26_MultiChannelImageBlending.cpp
code_win/【5】第五章/【27】图像对比度、亮度值调整/27_图像对比度、亮度值调整/: 27_ChangeContrastAndBright.cpp
code_win/【5】第五章/【28】离散傅里叶变换/28_离散傅里叶变换/: 28_DFT.cpp
code_win/【5】第五章/【29】XML和YAML文件的写入/29_XML和YAMl文件的写入/: 29_Write_XML_and_YAML_File.cpp
code_win/【5】第五章/【30】XML和YAML文件的读取/30_XML和YAMl文件的读取/: 30_Read_XML_and_YAML_File.cpp
code_win/【6】第六章/【31】boxFilter函数用法示例/31_方框滤波boxFilter函数的使用/: 31_boxFilter.cpp
code_win/【6】第六章/【32】blur函数用法示例/32_均值滤波blur函数的使用/: 32_blur.cpp
code_win/【6】第六章/【33】GaussianBlur函数用法示例/33_高斯模糊GaussianBlur函数的用法/: 33_GaussianBlur.cpp
code_win/【6】第六章/【34】线性图像滤波综合示例/34_线性图像滤波综合示例/: 34_LinearImageFilter.cpp
code_win/【6】第六章/【35】MedianBlur函数用法示例/35_MedianBlur函数用法示例/: 35_medianBlur.cpp
code_win/【6】第六章/【36】bilateralFilter函数用法示例/36_双边滤波bilateralFilter函数使用示例/: 36_bilateralFilter.cpp
code_win/【6】第六章/【37】图像滤波综合示例/37_图像滤波综合示例/: 37_ImageFiltering.cpp
code_win/【6】第六章/【38】dilate函数用法示例/38_图像膨胀dilate函数用法示例/: 38_dilate.cpp
code_win/【6】第六章/【39】erode函数用法示例/39_图像腐蚀erode函数用法示例/: 39_erode.cpp
code_win/【6】第六章/【40】图像腐蚀与膨胀综合示例/40_图像腐蚀与膨胀综合示例/: 40_dilate_And_erode.cpp
code_win/【6】第六章/【41】用morphologyEx进行图像膨胀/41_用morphologyEx进行图像膨胀/: 41_DilationEX.cpp
code_win/【6】第六章/【42】用morphologyEx进行图像腐蚀/42_用morphologyEx进行图像腐蚀/: ErodeEX.cpp
code_win/【6】第六章/【43】用morphologyEx进行图像开运算/43_用morphologyEx进行图像开运算/: 43_Opening.cpp
code_win/【6】第六章/【44】用morphologyEx进行图像闭运算/44_用morphologyEx进行图像闭运算/: 44_Closing.cpp
code_win/【6】第六章/【45】用morphologyEx进行形态学梯度运算/45_用morphologyEx进行形态学梯度运算/: 45_Gradient.cpp
code_win/【6】第六章/【46】用morphologyEx进行形态学顶帽运算/46_用morphologyEx进行形态学顶帽运算/: 46_TopHat.cpp
code_win/【6】第六章/【47】用morphologyEx进行形态学黑帽运算/47_用morphologyEx进行形态学黑帽运算/: 47_BlackHat.cpp
code_win/【6】第六章/【48】形态学图像处理综合示例/48_形态学图像处理综合示例/: 48_Morphology.cpp
code_win/【6】第六章/【49】floodFill函数用法示例/49_漫水填充floodFill函数用法示例/: 49_floodFill.cpp
code_win/【6】第六章/【50】漫水填充算法综合示例/50_漫水填充算法综合示例/: 50_floodFill2.cpp
code_win/【6】第六章/【51】resize函数用法示例/51_resize函数用法示例/: resize.cpp
code_win/【6】第六章/【52】pyrUp函数用法示例/52_pyrUp函数用法示例/: 52_pyrUp.cpp
code_win/【6】第六章/【53】pyrDown函数用法示例/53_pyrDown函数用法示例/: 53_pyrDown.cpp
code_win/【6】第六章/【54】图像金字塔和resize综合示例/54_图像金字塔和resize综合示例/: 54_PyrAndResize.cpp
code_win/【6】第六章/【55】基本阈值操作/55_基本阈值操作/: 55_threshold.cpp
code_win/【7】第七章/【56】canny函数用法示例/56_canny函数用法示例/: 56_canny.cpp
code_win/【7】第七章/【57】sobel函数用法示例/57_sobel函数用法示例/: 57_sobel.cpp
code_win/【7】第七章/【58】Laplacian函数用法示例/58_Laplacian函数用法示例/: 58_Laplacian.cpp
code_win/【7】第七章/【59】Scharr函数用法示例/59_Scharr函数用法示例/: 59_Scharr.cpp
code_win/【7】第七章/【60】边缘检测综合示例/60_边缘检测综合示例/: EdgeDetection.cpp
code_win/【7】第七章/【61】HoughLines函数用法示例/61_HoughLines函数用法示例/: 61_HoughLines.cpp
code_win/【7】第七章/【62】HoughLinesP函数用法示例/62_HoughLinesP函数用法示例/: 62_HoughLinesP.cpp
code_win/【7】第七章/【63】HoughCircles函数用法示例/63_HoughCircles函数用法示例/: 63_HoughCircles.cpp
code_win/【7】第七章/【64】霍夫线变换综合示例/64_霍夫线变换综合示例/: 64_HoughLines.cpp
code_win/【7】第七章/【65】remap函数用法示例/65_remap函数用法示例/: 65_remap.cpp
code_win/【7】第七章/【66】实现多种重映射综合示例/66_实现多种重映射综合示例/: 66_remap2.cpp
code_win/【7】第七章/【67】仿射变换综合示例/67_仿射变换综合示例/: 67_AffineTransform.cpp
code_win/【7】第七章/【68】直方图均衡化/68_直方图均衡化/: 68_equalizeHist.cpp
code_win/【8】第八章/【69】轮廓查找基础/69_基础轮廓查找/: 69_findContours.cpp
code_win/【8】第八章/【70】查找并绘制轮廓综合示例/70_查找并绘制轮廓综合示例/: 70_FindAndDrawContours.cpp
(+14 files in other folders)
